@@ -1,3 +1,15 @@
+2010-06-03 Riccardo Mottola <rmottola@users.sf.net>
+
+	* Headers/Protocols/CodeEditorView.h:
+	Declare new view protocol
+
+	* Modules/Editors/ProjectCenter/PCEditorView.h
+	* Modules/Editors/ProjectCenter/PCEditorView.m:
+	Conform to CodeEditorView protocol and add accessor to the editor.
+
+	* Framework/PCProjectWindow.m:
+	Return the view's editor undo manager.
+
 2010-06-01 Riccardo Mottola <rmottola@users.sf.net>
 
 	* Modules\Editors\ProjectCenter\PCEditor.m,
